--- a/api/package.json
+++ b/api/package.json
@@ -18,19 +18,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.0.0",
-    "fastify-plugin": "^3.0.0",
     "@fastify/autoload": "^5.0.0",
     "@fastify/sensible": "^4.1.0",
-    "fastify-cli": "^4.3.0"
+    "fastify": "^4.0.0",
+    "fastify-cli": "^4.3.0",
+    "fastify-plugin": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@types/tap": "^15.0.5",
-    "ts-node": "^10.4.0",
     "concurrently": "^7.0.0",
     "fastify-tsconfig": "^1.0.1",
     "tap": "^16.1.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
 }
