--- a/scraper/package.json
+++ b/scraper/package.json
@@ -12,5 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@types/puppeteer": "^5.4.6",
+    "axios": "^0.27.2",
+    "puppeteer": "^16.0.0"
   }
 }
