--- a/scraper/package.json
+++ b/scraper/package.json
@@ -14,6 +14,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@fast-csv/parse": "^4.3.6",
     "@types/puppeteer": "^5.4.6",
     "axios": "^0.27.2",
     "puppeteer": "^16.0.0"
