--- a/scraper/package.json
+++ b/scraper/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "prisma": "^4.1.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "@fast-csv/parse": "^4.3.6",
+    "@prisma/client": "^4.1.1",
     "@types/puppeteer": "^5.4.6",
     "puppeteer": "^16.0.0"
   }
