--- a/scraper/package.json
+++ b/scraper/package.json
@@ -18,6 +18,7 @@
     "@fast-csv/parse": "^4.3.6",
     "@prisma/client": "^4.1.1",
     "@types/puppeteer": "^5.4.6",
-    "puppeteer": "^16.0.0"
+    "puppeteer": "^16.0.0",
+    "uuidv4": "^6.2.13"
   }
 }
